--- a/.editorconfig
+++ b/.editorconfig
@@ -4,12 +4,21 @@ root = true
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
-indent_style = space
-indent_size = 4
+indent_style = tab
+indent_size = 2
 trim_trailing_whitespace = true
 
 [*.md]
+max_line_length = off
 trim_trailing_whitespace = false
+indent_style = space
+indent_size = 4
 
 [*.yml]
+max_line_length = off
+indent_style = space
+indent_size = 2
+
+[*.json]
+indent_style = space
 indent_size = 2
