ANIDB: modified nginx config file

--- a/resources/nginx.conf
+++ b/resources/nginx.conf
@@ -1,6 +1,6 @@
-client_max_body_size 100m;
-server_tokens        off;
-keepalive_requests   100000;
+# client_max_body_size 100m;
+# server_tokens        off;
+# keepalive_requests   100000;
 
 location / {
     index index.php index.html;
@@ -20,6 +20,6 @@ location / {
     }
 }
 
-location ~ ^/index.php/ {
-    gzip on
-}
+# location ~ ^/index.php/ {
+#     gzip on
+# }
