--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ Homestead.json
 Homestead.yaml
 /.vagrant
 
-/bootstrap/cache
+/bootstrap/cache/*
+!/bootstrap/cache/.gitkeep
 
 /database/*.sqlite
 /database/*.sqlite-journal
