--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ Homestead.yaml
 /.vagrant
 
 /bootstrap/cache/*
-# !/bootstrap/cache/.gitkeep
+!/bootstrap/cache/.gitkeep
 
 /database/*.sqlite
 /database/*.sqlite-journal
