ANIDB: modified routes for API usage

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ Homestead.yaml
 /database/*.sqlite
 /database/*.sqlite-journal
 
+/storage/framework/cache/*
 /storage/framework/sessions/*
 !/storage/framework/sessions/.gitkeep
 /storage/framework/views/*
