--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/lumen-framework": "5.8.*"
+        "laravel/lumen-framework": "^5.8.9"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^8.2.3",
         "mockery/mockery": "^1.0"
     },
     "autoload": {
