--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "kreait/firebase-php": "^4.26",
         "laravel/lumen-framework": "^5.8.9"
     },
     "require-dev": {
