ANIDB: added firebase environmental variables

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,10 @@ LOG_SLACK_WEBHOOK_URL=
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+FIRE_PROJECT_ID=project_id
+FIRE_PRIVATE_KEY=private_key
+FIRE_KEY="NOTE: change all backslash 'n' to \\n"
+FIRE_EMAIL=project_email
+FIRE_CLIENT_ID=000
+FIRE_CERT_URL=fire_cert_url
