ANIDB: added database environmental variables

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,11 @@ LOG_SLACK_WEBHOOK_URL=
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
+DB_USERNAME=username
+DB_PASSWORD=password
+DB_CLUSTER=cluster-cluster.mongodb.net
+DB_DATABASE=database
+
 FIRE_PROJECT_ID=project_id
 FIRE_PRIVATE_KEY=private_key
 FIRE_KEY="NOTE: change all backslash 'n' to \\n"
