--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=7.1.3",
         "kreait/firebase-php": "^4.26",
-        "laravel/lumen-framework": "^5.8.9"
+        "laravel/lumen-framework": "^5.8.9",
+        "mongodb/mongodb": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
@@ -15,6 +16,9 @@
         "mockery/mockery": "^1.0"
     },
     "autoload": {
+        "files": [
+            "bootstrap/helpers.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
