--- a/.editorconfig
+++ b/.editorconfig
@@ -22,3 +22,8 @@ indent_size = 2
 [*.json]
 indent_style = space
 indent_size = 2
+
+[*.dockerfile]
+max_line_length = off
+indent_style = space
+indent_size = 2
