ANIDB: added composer script for testing

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "test": [
+            "phpunit"
         ]
     },
     "config": {
