--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: ./docker
       dockerfile: php.dockerfile
       args:
-        - LARADOCK_PHP_VERSION=7.3
+        - PHP_VERSION=7.3
     volumes:
       - ./docker/php-config/php7.3.ini:/usr/local/etc/php/php.ini
       - ./:/var/www:cached
