--- a/.editorconfig
+++ b/.editorconfig
@@ -27,3 +27,8 @@ indent_size = 2
 max_line_length = off
 indent_style = space
 indent_size = 2
+
+[composer.json]
+max_line_length = off
+indent_style = space
+indent_size = 4
