--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     ],
     "require": {
         "php": ">=7.1.3",
+        "fabpot/goutte": "^3.2",
         "guzzlehttp/guzzle": "^6.3",
         "kreait/firebase-php": "^4.26",
         "laravel/lumen-framework": "^5.8.10",
