ANIDB: added scraper uri to env

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,5 @@ FIRE_KEY="NOTE: change all backslash 'n' to \\n"
 FIRE_EMAIL=project_email
 FIRE_CLIENT_ID=000
 FIRE_CERT_URL=fire_cert_url
+
+SCRAPER_BASE_URI=example.com
