ANIDB: added env for mailgun

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ FIRE_CLIENT_ID=000
 
 SCRAPER_BASE_URI=example.com
 RELEASE_BASE_URI=api.example.com
+
+MAILGUN_API_KEY=sample-sample-sample
+MAILGUN_DOMAIN=domain
