--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,4 @@ RELEASE_BASE_URI=api.example.com
 
 MAILGUN_API_KEY=sample-sample-sample
 MAILGUN_DOMAIN=domain
+MAILGUN_TEST_USER="Test User <email@mail.com>"
