--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ APP_URL=http://localhost
 APP_TIMEZONE=UTC
 API_KEY=
 
+DISABLE_DB=false
+DISABLE_FIREBASE=false
+DISABLE_SCRAPER=false
+DISABLE_MAILGUN=false
+
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
