--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,11 @@
         "fabpot/goutte": "^3.2",
         "guzzlehttp/guzzle": "^6.3",
         "kreait/firebase-php": "^4.32.0",
+        "kriswallsmith/buzz": "^1.0",
         "laravel/lumen-framework": "^6.0.2",
         "mailgun/mailgun-php": "^3.0",
         "mongodb/mongodb": "^1.5.0",
-        "php-http/guzzle6-adapter": "^1.1",
+        "nyholm/psr7": "^1.2",
         "phpoffice/phpspreadsheet": "^1.9"
     },
     "require-dev": {
