--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "kriswallsmith/buzz": "^1.0",
         "laravel/lumen-framework": "^6.0.2",
         "mailgun/mailgun-php": "^3.0",
-        "mongodb/mongodb": "^1.4.3",
+        "mongodb/mongodb": "1.4.3",
         "nyholm/psr7": "^1.2",
         "phpoffice/phpspreadsheet": "^1.9"
     },
