DOCKER: added nginx version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       context: ./docker
       dockerfile: nginx.dockerfile
       args:
+        - NGINX_VERSION=1.16
         - PHP_UPSTREAM_CONTAINER=php
         - PHP_UPSTREAM_PORT=9000
     volumes:
