--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
             "mkdir -p storage/framework/cache && mkdir -p storage/framework/views"
         ],
         "post-autoload-dump": [
+            "apidoc -i docs -o docs-api",
             "touch public/deploy-status"
         ],
         "post-root-package-install": [
