--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,9 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
+        "docs": [
+            "apidoc -i docs -o public/docs"
+        ],
         "test": [
             "phpunit -c tests/phpunit.xml; rm tests/.phpunit.result.cache"
         ]
