ANIDB: modified deployment nginx config file

--- a/docker/heroku-nginx.conf
+++ b/docker/heroku-nginx.conf
@@ -2,6 +2,10 @@ location / {
 	try_files $uri @rewriteapp;
 }
 
+location /docs {
+	try_files $uri /docs/index.html;
+}
+
 location @rewriteapp {
 	rewrite ^(.*)$ /index.php/$1 last;
 }
