ANIDB: modified deployment config

--- a/docker/heroku-nginx.conf
+++ b/docker/heroku-nginx.conf
@@ -3,7 +3,8 @@ location / {
 }
 
 location /docs {
-	try_files $uri /docs/index.html;
+	root /app/public/docs;
+	autoindex on;
 }
 
 location @rewriteapp {
