ANIDB: modified deployment config

--- a/docker/heroku-nginx.conf
+++ b/docker/heroku-nginx.conf
@@ -2,9 +2,13 @@ location / {
 	try_files $uri @rewriteapp;
 }
 
-location /docs/ {
+location /docs {
 	root /app/public;
 	autoindex on;
+
+	location / {
+	try_files $uri @rewriteapp;
+	}
 }
 
 location @rewriteapp {
