--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "guzzlehttp/guzzle": "^6.5",
         "kreait/firebase-php": "^4.37",
         "kriswallsmith/buzz": "^1.0",
-        "laravel/lumen-framework": "^6.2.0",
+        "laravel/lumen-framework": "6.2",
         "mailgun/mailgun-php": "^3.0",
         "mongodb/mongodb": "1.4.3",
         "nyholm/psr7": "^1.2",
