--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
             "npm run docs"
         ],
         "test": [
-            "phpunit -c tests/phpunit.xml; rm tests/.phpunit.result.cache"
+            "phpunit -c tests/phpunit.xml && rm tests/.phpunit.result.cache"
         ]
     },
     "config": {
