--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^9.0",
         "mockery/mockery": "^1.3.0"
     },
     "autoload": {
@@ -66,7 +66,7 @@
             "npm run docs"
         ],
         "test": [
-            "phpunit -c tests/phpunit.xml && rm tests/.phpunit.result.cache"
+            "phpunit -c tests/phpunit.xml"
         ]
     },
     "config": {
