--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
-        "phpunit/phpunit": "^9.0",
-        "mockery/mockery": "^1.3.0"
+        "mockery/mockery": "^1.3.0",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "files": [
