--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
+        "php": "^7.2.5",
         "fabpot/goutte": "^3.3",
         "guzzlehttp/guzzle": "^6.5",
         "kreait/firebase-php": "^4.39",
         "kriswallsmith/buzz": "^1.1",
-        "laravel/lumen-framework": "6.2",
+        "laravel/lumen-framework": "^7.0",
         "mailgun/mailgun-php": "^3.0",
         "mongodb/mongodb": "1.4.3",
         "nyholm/psr7": "^1.2",
@@ -34,7 +34,7 @@
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
-        "mockery/mockery": "^1.3.0",
+        "mockery/mockery": "^1.3",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
