--- a/composer.json
+++ b/composer.json
@@ -22,16 +22,15 @@
     ],
     "require": {
         "php": "^7.3",
-        "fabpot/goutte": "^4.0",
         "filp/whoops": "^2.9",
-        "guzzlehttp/guzzle": "^6.5",
         "kreait/firebase-php": "^5.11",
-        "kriswallsmith/buzz": "^1.1",
         "laravel/lumen-framework": "^8.2",
         "mailgun/mailgun-php": "^3.1",
         "mongodb/mongodb": "^1.6.0",
         "nyholm/psr7": "^1.3",
-        "phpoffice/phpspreadsheet": "^1.13"
+        "phpoffice/phpspreadsheet": "^1.13",
+        "symfony/dom-crawler": "^5.1",
+        "symfony/http-client": "^5.1"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
