--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,8 @@ services:
       - ./docker/logs/:/var/log/nginx
       - ./docker/sites/:/etc/nginx/sites-available
     ports:
-      - "80:80"
+      - "${APP_PORT:-80}:80"
     expose:
-      - "80"
+      - "${APP_PORT:-80}"
     depends_on:
       - php
