DOCKER: add new database env

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ DISABLE_DB=false
 DISABLE_FIREBASE=false
 DISABLE_SCRAPER=false
 DISABLE_MAILGUN=false
+DISABLE_MYSQL=false
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
@@ -22,6 +23,11 @@ DB_USERNAME=username
 DB_PASSWORD=password
 DB_CLUSTER=cluster-cluster.mongodb.net
 DB_DATABASE=database
+
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DATABASE=anidb
+MYSQL_USER=user
+MYSQL_PASSWORD=admin
 
 FIRE_PROJECT_ID=project_id
 FIRE_KEY="NOTE: change all backslash 'n' to \\n"
