--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,6 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE=UTC
-API_KEY=
 APP_PORT=80
 
 DISABLE_DB=false
@@ -14,20 +12,31 @@ DISABLE_MAILGUN=false
 DISABLE_MYSQL=false
 
 LOG_CHANNEL=stack
-LOG_SLACK_WEBHOOK_URL=
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
 
+DB_CONNECTION=pgsql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
+
+BROADCAST_DRIVER=log
 CACHE_DRIVER=file
+FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=1440
 
-DB_USERNAME=username
-DB_PASSWORD=password
-DB_CLUSTER=cluster-cluster.mongodb.net
-DB_DATABASE=database
-
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=anidb
-MYSQL_USER=user
-MYSQL_PASSWORD=admin
+MAIL_MAILER=smtp
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME="${APP_NAME}"
 
 FIRE_PROJECT_ID=project_id
 FIRE_KEY="NOTE: change all backslash 'n' to \\n"
