--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,15 @@
 {
     "name": "rin-anidb/anidb-be",
-    "description": "Rin Minase's Anime Database API Service utilizing Lumen 7 by Laravel and Mongo DB Atlas and is deployed to Heroku.",
+    "description": "Rin Minase's AniDB API Service utilizing Laravel deployed to Heroku.",
+    "type": "project",
+    "license": "MIT",
     "keywords": [
         "laravel",
         "lumen",
         "docker",
         "heroku",
-        "restful-api",
-        "phpunit"
+        "restful-api"
     ],
-    "license": "MIT",
-    "type": "project",
     "authors": [
         {
             "name": "Rin Minase",
@@ -20,56 +19,58 @@
         }
     ],
     "require": {
-        "php": "^7.3",
-        "kreait/firebase-php": "^5.11",
-        "laravel/lumen-framework": "^8.2",
-        "mailgun/mailgun-php": "^3.1",
-        "nyholm/psr7": "^1.3",
-        "phpoffice/phpspreadsheet": "^1.13",
-        "symfony/dom-crawler": "^5.1",
-        "symfony/http-client": "^5.1"
+        "php": "^7.3|^8.0",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/framework": "^8.75",
+        "laravel/sanctum": "^2.11",
+        "laravel/tinker": "^2.5"
     },
     "require-dev": {
-        "filp/whoops": "^2.9",
-        "mockery/mockery": "^1.4",
-        "phpunit/phpunit": "^9.4"
+        "facade/ignition": "^2.5",
+        "fakerphp/faker": "^1.9.1",
+        "laravel/sail": "^1.0.1",
+        "nunomaduro/collision": "^5.10"
     },
     "autoload": {
-        "files": [
-            "bootstrap/helpers.php"
-        ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         }
-    },
-    "autoload-dev": {
-        "classmap": [
-            "tests/"
-        ]
     },
     "scripts": {
         "pre-install-cmd": [
-            "rm -f public/deploy-status",
-            "mkdir -p storage/framework/cache && mkdir -p storage/framework/views"
+            "rm -f public/deploy-status"
         ],
         "post-autoload-dump": [
-            "npm i || npm run docs || true",
-            "touch public/deploy-status"
+            "yarn || npm run docs || true",
+            "touch public/deploy-status",
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "docs": [
-            "npm i || npm run docs || true"
+        "post-create-project-cmd": [
+            "@php artisan key:generate --ansi"
         ],
-        "test": [
-            "phpunit -c tests/phpunit.xml"
+        "docs": [
+            "yarn || npm run docs || true"
         ]
     },
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
+    },
     "config": {
+        "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
+        "sort-packages": true
     },
     "minimum-stability": "dev",
     "prefer-stable": true
