--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "docs": "apidoc -i docs -o public/docs",
+    "build": "npm run docs",
     "watch": "nodemon -e php -x npm run docs -w docs/"
   },
   "dependencies": {
