ANIDB: modified project description

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "rin-anidb/anidb-be",
-    "description": "Rin Minase's AniDB API Service utilizing Laravel deployed to Heroku.",
+    "description": "Rin Minase's AniDB API Service utilizing Laravel deployed to Heroku",
     "type": "project",
     "license": "MIT",
     "keywords": [
