--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anidb-be",
-  "description": "Rin Minase's Anime Database API Service utilizing Lumen 7 by Laravel, Mongo DB Atlas and is deployed to Heroku.",
+  "description": "Rin Minase's AniDB API Service utilizing Laravel deployed to Heroku",
   "version": "0.1.0",
   "license": "MIT",
   "author": "Rin Minase",
