ANIDB: appended helper functions

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "bootstrap/helpers.php"
+        ]
     },
     "scripts": {
         "pre-install-cmd": [
