--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3'
 
+volumes:
+  db:
+    driver: local
+
 services:
   php:
     container_name: anidb
@@ -36,3 +40,17 @@ services:
       - "${APP_PORT:-80}"
     depends_on:
       - php
+
+  db:
+    container_name: anidb-pgsql
+    image: postgres:13.1-alpine
+    restart: unless-stopped
+    tty: true
+    environment:
+      - POSTGRES_USER=${DB_USERNAME:-postgres}
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-postgres}
+      - POSTGRES_DB=${DB_DATABASE:-anidb}
+    ports:
+      - '${DB_PORT:-5432}:5432'
+    volumes:
+      - db:/var/lib/postgresql/data
