--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_URL=
+DB_HOST="NOTE: use docker container name of sql"
+DB_PORT=5432
+DB_DATABASE=anidb
 DB_USERNAME=root
 DB_PASSWORD=
 
