--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "kreait/firebase-php": "^6.3",
-        "laravel/framework": "^8.75",
+        "laravel/framework": "^9.16",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "nyholm/psr7": "^1.5",
@@ -31,10 +31,10 @@
         "symfony/http-client": "^5.4"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
-        "nunomaduro/collision": "^5.10"
+        "nunomaduro/collision": "^6.1"
     },
     "autoload": {
         "psr-4": {
