--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,10 @@
         "symfony/http-client": "^5.4"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
-        "nunomaduro/collision": "^6.1"
+        "nunomaduro/collision": "^6.1",
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
