ANIDB: modified environmental variable

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_URL=
+DATABASE_URL=
 DB_HOST="NOTE: use docker container name of sql"
 DB_PORT=5432
 DB_DATABASE=anidb
