--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,10 @@
         "kreait/firebase-php": "^6.3",
         "laravel/framework": "^9.16",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
         "nyholm/psr7": "^1.5",
-        "symfony/dom-crawler": "^6.0",
-        "symfony/http-client": "^6.0"
+        "symfony/dom-crawler": "^6.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "nunomaduro/collision": "^6.1",
         "spatie/laravel-ignition": "^1.0"
