--- a/.env.example
+++ b/.env.example
@@ -17,11 +17,11 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
 DATABASE_URL=
-DB_HOST="NOTE: use docker container name of sql"
+DB_HOST=anidb-pgsql
 DB_PORT=5432
 DB_DATABASE=anidb
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
