ANIDB: modified project description

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "apidoc": {
     "name": "Rin's AniDB API / Middleware",
     "version": "0.1.0",
-    "description": "Rin Minase's Anime Database API Service utilizing Lumen 5.8 by Laravel and Mongo DB Atlas and is deployed to Heroku.",
+    "description": "Rin Minase's AniDB API Service utilizing Laravel deployed to Heroku",
     "title": "AniDB API Documentation",
     "url": "https://anidb-staging.herokuapp.com/docs"
   }
