ANIDB: added max count to env file

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ DISABLE_MYSQL=false
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+LOGS_TO_KEEP=200
 
 DB_CONNECTION=pgsql
 DATABASE_URL=
