--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ APP_NAME=AniDB
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=
+APP_URL_DEV=http://localhost
 APP_PORT=80
-ALLOWED_ORIGINS=
 
 DISABLE_DB=false
 DISABLE_FIREBASE=false
