--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,5 @@ RELEASE_BASE_URI=api.example.com
 MAILGUN_API_KEY=sample-sample-sample
 MAILGUN_DOMAIN=domain
 MAILGUN_TEST_USER="Test User <email@mail.com>"
+
+CLOUDINARY_URL=
