--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/dom-crawler": "^6.0"
     },
     "require-dev": {
+        "mockery/mockery": "^1.5",
         "nunomaduro/collision": "^6.4",
         "phpunit/phpunit": "^9.6",
         "spatie/laravel-ignition": "^1.6"
@@ -76,8 +77,11 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
