🐛 fix: fixed deployment issue on running test cases

--- a/composer.json
+++ b/composer.json
@@ -35,16 +35,12 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Tests\\": "tests/"
         },
         "files": [
             "bootstrap/helpers.php"
         ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
     },
     "scripts": {
         "pre-install-cmd": [
