--- a/composer.json
+++ b/composer.json
@@ -23,24 +23,28 @@
         "laravel/framework": "^9.50",
         "laravel/sanctum": "^3.2",
         "loilo/fuse": "^6.6",
-        "mockery/mockery": "^1.5",
-        "phpunit/phpunit": "^9.6",
         "symfony/dom-crawler": "^6.0"
     },
     "require-dev": {
+        "mockery/mockery": "^1.5",
         "nunomaduro/collision": "^6.4",
+        "phpunit/phpunit": "^9.6",
         "spatie/laravel-ignition": "^1.6"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "Tests\\": "tests/"
+            "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
             "bootstrap/helpers.php"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     },
     "scripts": {
         "pre-install-cmd": [
