--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/dom-crawler": "^6.0"
     },
     "require-dev": {
+        "fakerphp/faker": "*",
         "nunomaduro/collision": "^6.4",
         "phpunit/phpunit": "^9.6",
         "spatie/laravel-ignition": "^1.6"
