✨ feat: added swagger dependencies

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "cloudinary-labs/cloudinary-laravel": "^2.0",
+        "darkaonline/l5-swagger": "^8.5",
         "laravel/framework": "^10.11",
         "laravel/sanctum": "^3.2",
         "loilo/fuse": "^6.6",
