--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_URL=
 APP_URL_PROXY=
 APP_URL_DEV=http://localhost
 APP_PORT=80
+APP_PLATFORM=prod
 
 DISABLE_SCRAPER=false
 DISABLE_MAILGUN=false
