--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
+            "@php artisan config:cache",
             "@php artisan l5-swagger:generate"
         ],
         "post-update-cmd": [
