🐛 fix: added config caching to bootup script

--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,9 @@
         }
     },
     "scripts": {
+        "warmup": [
+            "php artisan config:cache"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
