--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
+        "post-deployment": [
+            "php artisan cache:clear",
+            "php artisan config:cache",
+            "php artisan route:cache"
+        ],
         "docs": [
             "@php artisan l5-swagger:generate"
         ]
