--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,16 @@ APP_NAME=AniDB
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=
-APP_URL_FOURLEAF=
-APP_URL_PROXY=
-APP_URL_DEV=http://localhost
 APP_PORT=80
 APP_PLATFORM=prod
+
+APP_URL=
+APP_URL_PROXY=
+
+APP_URL_FOURLEAF=
+APP_URL_FOURLEAF_PROXY=
+
+APP_URL_DEV=http://localhost
 
 DISABLE_SCRAPER=false
 
