--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       dockerfile: php.dockerfile
       args:
         - PHP_VERSION=8.3
+        - ALPINE_VERSION=3.17
         - COMPOSER_VERSION=2.7.7
     volumes:
       - ./:/var/www
