--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,6 @@ services:
     ports:
      - "${DBC_PORT:-26257}:26257"
      - "${DBC_ADMIN_PORT:-8080}:8080"
-    command: start-single-node --insecure
+    command: start-single-node --insecure --max-sql-memory=128MiB
     volumes:
       - dbc:/cockroach/cockroach-data"
