--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         "laravel/framework": "^11.19",
         "laravel/sanctum": "^4.0",
         "loilo/fuse": "^7.0",
-        "symfony/dom-crawler": "^7.1",
-        "ylsideas/cockroachdb-laravel": "^1.4"
+        "symfony/dom-crawler": "^7.1"
     },
     "require-dev": {
         "nunomaduro/collision": "^8.4",
