--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,17 @@
     ],
     "require": {
         "php": "^8.1|^8.3",
-        "cloudinary-labs/cloudinary-laravel": "~2.1.0",
-        "darkaonline/l5-swagger": "~8.6.0",
+        "cloudinary-labs/cloudinary-laravel": "~2.2.1",
+        "darkaonline/l5-swagger": "~8.6.1",
         "laravel/framework": "~11.20.0",
-        "laravel/sanctum": "~4.0.0",
-        "loilo/fuse": "~7.0.0",
-        "symfony/dom-crawler": "^7.1"
+        "laravel/sanctum": "~4.0.2",
+        "loilo/fuse": "~7.0.1",
+        "nesbot/carbon": "~3.8.0",
+        "symfony/dom-crawler": "~7.1.1"
     },
     "require-dev": {
         "nunomaduro/collision": "~8.4.0",
-        "phpunit/phpunit": "~11.3.0",
+        "phpunit/phpunit": "~11.3.1",
         "spatie/laravel-ignition": "~2.8.0"
     },
     "autoload": {
