--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "^8.1|^8.3",
+        "php": "^8.1",
         "cloudinary-labs/cloudinary-laravel": "~2.2.1",
         "darkaonline/l5-swagger": "~8.6.1",
         "laravel/framework": "~11.20.0",
