--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
       context: ./docker
       dockerfile: nginx.dockerfile
       args:
-        - NGINX_VERSION=1.26
+        - NGINX_VERSION=1.27.1
+        - ALPINE_VERSION=3.20
         - PHP_UPSTREAM_CONTAINER=php
         - PHP_UPSTREAM_PORT=9000
     volumes:
