--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": "^8.1",
         "cloudinary-labs/cloudinary-laravel": "~2.2.3",
-        "darkaonline/l5-swagger": "~8.6.5",
+        "darkaonline/l5-swagger": "8.6.3",
         "laravel/framework": "~11.41.3",
         "laravel/sanctum": "~4.0.8",
         "loilo/fuse": "~7.1.1",
