--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,12 @@
         "laravel/framework": "~11.43.2",
         "laravel/sanctum": "~4.0.8",
         "loilo/fuse": "~7.1.1",
-        "nesbot/carbon": "~3.8.6"
+        "nesbot/carbon": "~3.8.6",
+        "tpetry/laravel-postgresql-enhanced": "~2.3.2"
     },
     "require-dev": {
         "nunomaduro/collision": "~8.6.1",
-        "phpunit/phpunit": "~11.5.7",
+        "phpunit/phpunit": "~11.5.10",
         "spatie/laravel-ignition": "~2.9.1"
     },
     "autoload": {
