--- a/composer.json
+++ b/composer.json
@@ -50,9 +50,6 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
-        "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
-        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
@@ -60,9 +57,9 @@
             "@php artisan key:generate --ansi"
         ],
         "post-deployment": [
-            "php artisan cache:clear",
-            "php artisan config:cache",
-            "php artisan route:cache"
+            "@php artisan cache:clear",
+            "@php artisan config:cache",
+            "@php artisan route:cache"
         ],
         "docs": [
             "@php artisan l5-swagger:generate"
