✨ feat: simplified environment variables, removed unused variables

--- a/.env.example
+++ b/.env.example
@@ -13,24 +13,20 @@ APP_URL_DEV=http://localhost
 APP_URL_FOURLEAF=
 APP_URL_FOURLEAF_PROXY=
 
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 LOGS_TO_KEEP=200
 
-DATABASE_URL=
+DB_CONNECTION=pgsql
+DB_URL=
 DB_HOST=anidb-pgsql
 DB_PORT=5432
 DB_DATABASE=anidb
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
+CACHE_STORE=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=1440
 
 CLOUDINARY_URL=
 
