✨ feat: added sentry config for monitoring

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 
 CLOUDINARY_URL=
-
+SENTRY_DSN=
 ANILIST_BASE_URI=graphql.anilist.co
 
 VEHICLE_START_DATE=
