✨ feat: added env for backup config

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ APP_URL_FOURLEAF_PROXY=
 
 LOG_LEVEL=debug
 LOGS_TO_KEEP=200
+BACKUPS_TO_KEEP=30
+BACKUPS_MAX_DAYS=60
 
 DB_CONNECTION=pgsql
 DB_URL=
