✨ feat: migrated to use database session in laravel 11

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ DB_DATABASE=anidb
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
+SESSION_LIFETIME=1440
+
 CLOUDINARY_URL=
 SENTRY_DSN=
 ANILIST_BASE_URI=graphql.anilist.co
