--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
         "post-deployment": [
             "@php artisan cache:clear",
             "@php artisan config:cache",
-            "@php artisan route:cache"
+            "@php artisan route:cache",
+            "@php artisan view:cache"
         ],
         "docs": [
             "@php artisan l5-swagger:generate"
