✨ feat: added spreadsheet management dependency

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "laravel/sanctum": "~4.0.8",
         "nelexa/zip": "~4.0.2",
         "nesbot/carbon": "~3.9.0",
+        "phpoffice/phpspreadsheet": "~4.1.0",
         "sentry/sentry-laravel": "~4.13.0",
         "spatie/db-dumper": "~3.8.0",
         "tpetry/laravel-postgresql-enhanced": "~2.4.0"
