✨ feat: migrated to use caddy instead of nginx in local environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 volumes:
   db:
     driver: local
+  caddy_data:
+  caddy_config:
 
 services:
   php:
@@ -14,31 +16,23 @@ services:
         - ALPINE_VERSION=3.21
         - COMPOSER_VERSION=2.8.8
     volumes:
-      - ./:/var/www
+      - ./:/srv
     expose:
       - "9000"
-    working_dir: /var/www
+    working_dir: /srv
     tty: true
 
-  nginx:
-    container_name: anidb-nginx
+  caddy:
+    container_name: anidb-caddy
+    image: caddy:2.9.1-alpine
     restart: unless-stopped
-    build:
-      context: ./docker
-      dockerfile: nginx.dockerfile
-      args:
-        - NGINX_VERSION=1.27.4
-        - ALPINE_VERSION=3.21
-        - PHP_UPSTREAM_CONTAINER=php
-        - PHP_UPSTREAM_PORT=9000
-    volumes:
-      - ./:/var/www
-      - ./docker/logs/:/var/log/nginx
-      - ./docker/sites/:/etc/nginx/sites-available
     ports:
-      - "${APP_PORT:-80}:80"
-    expose:
-      - "${APP_PORT:-80}"
+      - "80:80"
+    volumes:
+      - ./docker/caddyfile:/etc/caddy/Caddyfile
+      - ./:/srv
+      - caddy_data:/data
+      - caddy_config:/config
     depends_on:
       - php
 
