✨ feat: disabled autostart of queue and schedule workers

--- a/docker/php-config/supervisord.conf
+++ b/docker/php-config/supervisord.conf
@@ -30,7 +30,7 @@ command=php artisan queue:work
 directory=/srv
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
-autostart=true
+autostart=false
 autorestart=true
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
@@ -40,7 +40,7 @@ command=php artisan schedule:work
 directory=/srv
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
-autostart=true
+autostart=false
 autorestart=true
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
