✨ feat: added init composer script

--- a/composer.json
+++ b/composer.json
@@ -56,11 +56,11 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
+        "initialize-project": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "@php artisan key:generate --ansi",
+            "@php artisan app:generate-api-key",
+            "@php artisan app:generate-root-password"
         ],
         "post-deployment": [
             "@php artisan cache:clear",
