--- a/composer.json
+++ b/composer.json
@@ -28,13 +28,13 @@
         "nelexa/zip": "~4.0.2",
         "nesbot/carbon": "~3.10.3",
         "phpoffice/phpspreadsheet": "~4.1.0",
-        "sentry/sentry-laravel": "~4.15.1",
+        "sentry/sentry-laravel": "~4.19.0",
         "spatie/db-dumper": "~3.8.0",
-        "tpetry/laravel-postgresql-enhanced": "~3.4.0"
+        "tpetry/laravel-postgresql-enhanced": "~3.5.0"
     },
     "require-dev": {
         "nunomaduro/collision": "~8.8.3",
-        "phpunit/phpunit": "~12.4.3",
+        "phpunit/phpunit": "~12.4.4",
         "spatie/laravel-ignition": "~2.9.1"
     },
     "autoload": {
@@ -81,7 +81,10 @@
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
-        "allow-plugins": {}
+        "allow-plugins": {},
+        "audit": {
+            "ignore": ["PKSA-64jn-3d9t-gncx"]
+        }
     },
     "minimum-stability": "stable",
     "prefer-stable": true
